# pipdate

./: .gitignore  .pylintrc  .travis.yml  Makefile  README.md  justfile  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml
pipdate/: __about__.py  __init__.py  cli.py  helpers.py  main.py  update.py
pipdated/: __about__.py  __init__.py  helpers.py
pypi_update_checker/: __init__.py  helpers.py
src/pipdate/: __about__.py  __main__.py  main.py
test/: test_pipdate.py  test_pipdated.py  test_updated.py
tests/: test_pipdate.py
tools/: pipdate  pipdate3
updated/: __init__.py  helpers.py  meta.py
