[metadata]
name = pipdate
version = 0.5.0
author = Nico Schlömer
email = nico.schloemer@gmail.com
description = Update all pip-installed packages
url = https://github.com/nschloe/pipdate
project_urls =
    Code=https://github.com/nschloe/pipdate
    Issues=https://github.com/nschloe/pipdate/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Utilities

[options]
packages = find:
# importlib_metadata can be removed when we support Python 3.8+ only
install_requires =
    appdirs
    importlib_metadata
    requests
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel

[options.entry_points]
console_scripts =
    pipdate = pipdate.__main__:update
