[metadata]
name = pipdate
version = 0.5.3
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Update all pip-installed packages
url = https://github.com/nschloe/pipdate
project_urls =
    Code=https://github.com/nschloe/pipdate
    Issues=https://github.com/nschloe/pipdate/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[options]
packages = find:
install_requires =
    appdirs
    importlib_metadata;python_version<"3.8"
    requests
    # https://github.com/nschloe/pipdate/pull/39
    setuptools
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel

[options.entry_points]
console_scripts =
    pipdate = pipdate.__main__:update
